<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.HomeFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image"
        android:src="@drawable/home" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hallo"
        android:fontFamily="@font/poppins_bold"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_marginTop="160dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:fontFamily="@font/poppins_regular"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginTop="200dp"
        android:layout_marginStart="20dp"/>

</FrameLayout>