<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_item_movies"
    android:layout_width="370dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginStart="20dp"
    app:cardCornerRadius="7dp"
    app:cardElevation="7dp"
    app:cardMaxElevation="7dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ImageView
            android:id="@+id/image_home"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:contentDescription="@string/image"
            android:src="@drawable/"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.01"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.134" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="270dp"
            android:layout_height="30dp"
            android:fontFamily="@font/poppins_regular"
            android:maxLines="2"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.222"
            app:layout_constraintStart_toEndOf="@+id/image_home"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.103" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="270dp"
            android:layout_height="55dp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/handling"
            android:textColor="@color/medium_black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/view"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_desc" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>